Fixes header spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .cover-container {
-  max-width: 55em;
+  width: 55em;
 }
 
 
